# vibe-etad

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  backend_requirements_v0.2.md  docker-compose.yml  docker-entrypoint.sh  seed_demo.py
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/common/: enums.py  errors.py  events.py  logging.py  pagination.py
backend/db/: enum_helper.py  session.py
backend/db/models/: __init__.py  assistant.py  audit.py  chat.py  matching.py  media.py  moderation.py  notification.py  profile.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_email_to_username.py  0003_add_last_active_at_to_users.py  0004_add_notifications_and_assistant_is_read.py  0005_add_is_bot_to_users.py  0006_add_account_source_to_users.py
backend/modules/admin/: router.py  schemas.py  service.py
backend/modules/assistant/: llm_adapter.py  router.py  schemas.py  service.py  session.py
backend/modules/assistant/agents/: __init__ copy.py.org  __init__.py
backend/modules/assistant/prompts/: profile_builder.py  zvibe_assistant.py
backend/modules/assistant/tools/: __init__.py  chat_tools.py  matching_tools.py  notification_tools.py  profile_tools.py
backend/modules/auth/: router.py  schemas.py  security.py  service.py
backend/modules/bot/: __init__.py  bot_agent.py  context.py  handlers.py  tools.py
backend/modules/chat/: router.py  schemas.py  service.py  websocket.py
backend/modules/matching/: router.py  schemas.py  scoring.py  service.py
backend/modules/media/: router.py  schemas.py  service.py
backend/modules/notifications/: router.py  schemas.py  service.py  websocket.py
backend/modules/profiles/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_assistant.py  test_auth.py  test_bot.py  test_chat.py  test_matching.py  test_profiles.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md
frontend/: index.html
scripts/: clear_chat.sh  (+6 more)
(+12 files in other folders)
