[project]
name = "zvibe-backend"
version = "0.1.0"
description = "ZVIBE — AI-first dating app backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
    "aiosqlite>=0.20.0",
    "email-validator>=2.2.0",
    "openai>=1.58.0",
    "google-genai>=1.0.0",
    "google-adk>=2.0.0",
    "litellm>=1.75.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "common", "db", "modules"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
